--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -1,29 +1,79 @@
-.link {
+.button {
     display: block;
 
-    margin-top: 20px;
-    padding: 8px 25px;
-
-    border: 4px solid #33AC9F;
-    background-color: rgba(155, 155, 155, 0.11);
-
-    color: #DEDEDE;
-    text-align: center;
-    letter-spacing: 2px;
-
-    transition: background-color 0.5s ease,
-    color 0.5s ease;
-}
-
-.link:hover {
-    background-color: #33AC9F;
-    color: #F5F5F5;
-}
-
-.link--back {
     position: absolute;
     bottom: 40px;
     right: 40px;
 
-    width: 160px;
+    overflow: hidden;
+
+    height: 62px;
+    width: 270px;
+
+    background-color: #3B8686;
+    box-shadow: 0 3px 10px 3px rgba(106, 125, 150, 0.25);
+    transform-style: preserve-3d;
+
+    transition: background-color 0.5s ease;
+}
+
+.button:after {
+    content: '';
+
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    height: 100%;
+    width: 100%;
+
+    opacity: 0;
+
+    background-color: rgba(40, 40, 40, 0.79);
+    border-radius: 35px;
+
+    transform: scaleX(0.5);
+    transition: transform 0.3s ease,
+    opacity 0.3s ease;
+    transform-style: preserve-3d;
+}
+
+.button--rounded {
+    border-radius: 35px;
+}
+
+.button__text {
+    display: block;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+
+    width: 100%;
+    text-align: center;
+
+    color: #fff;
+
+    font-weight: 500;
+    font-size: 14px;
+    text-transform: uppercase;
+
+    z-index: 2;
+
+    transform: translateY(-50%);
+    transition: color 0.5s ease;
+    transform-style: preserve-3d;
+}
+
+.button:hover:after {
+    opacity: 1;
+
+    background-color: rgba(40, 40, 40, 0.79);
+
+    transform: scaleX(1);
+}
+
+.button:hover .button__text {
+    color: #3B8686;
 }
