--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -2,16 +2,36 @@ body {
     overflow: hidden;
 
     height: 100%;
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
     margin: 0;
 
+    background-color: rgba(30, 30, 30, 0.79);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 canvas {
     width: 100%;
     height: 100%
+}
+
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 250px;
+
+    padding: 20px 20px;
+
+    transform: translateX(-125px) translateY(-50%);
+}
+
+.container__button {
+    position: relative;
+
+    width: auto;
+    height: 62px;
+}
+
+.container__button:nth-child(n+1) {
+    margin-top: 30px;
 }
